--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,9 @@ name = "r2e-docker"
 version = "0.1.0"
 dependencies = [
     "pydantic>=2.9.2",
-    "fire>=0.6.0",
+    "typer>=0.16.0",
+    "rich>=13.9.0",
+    "datasets>=4.5.0",
 ]
 requires-python = ">=3.10"
 
